Ceza eklerken karşılaşılan bir hata giderildi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,10 +59,10 @@
     <string name="deleted" tools:ignore="MissingTranslation">Silindi</string>
     <string name="take_it_back" tools:ignore="MissingTranslation">Geri al</string>
     <string name="hint_round_cont" tools:ignore="MissingTranslation">%d. tur</string>
-    <string name="winning_team_info_text">Kazanan takım: %s. Skor: %s</string>
+    <string name="winning_team_info_text" tools:ignore="MissingTranslation">Kazanan takım: %s. Skor: %s</string>
     <string name="winning_team_info_total_score_text" tools:ignore="MissingTranslation">Kazanan takım: </string>
     <string name="winning_team_info" tools:ignore="MissingTranslation">%s %s</string>
-    <string name="winning_player_info_text">Kazanan oyuncu %s. Skor: %s</string>
+    <string name="winning_player_info_text" tools:ignore="MissingTranslation">Kazanan oyuncu %s. Skor: %s</string>
     <string name="winning_player_info" tools:ignore="MissingTranslation">%s %s</string>
     <string name="error_not_work_this_device" tools:ignore="MissingTranslation">Uygulama bu cihazda çalışmıyor.</string>
     <string name="enter_penalty" tools:ignore="MissingTranslation">Ceza giriniz</string>
