--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,8 @@
     <string name="select_player_punish" tools:ignore="MissingTranslation">Ceza eklenecek oyuncuyu seçiniz</string>
     <string name="select_team_punish" tools:ignore="MissingTranslation">Ceza eklenecek takımı seçiniz</string>
     <string name="forward" tools:ignore="MissingTranslation">İleri</string>
+    <string name="game_detail_round_count" tools:ignore="MissingTranslation">%d</string>
+    <string name="input_score_hint" tools:ignore="MissingTranslation">Skor</string>
 
 
 </resources>
