--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,7 +32,7 @@
         <item>My single games</item>
         <item>My partner games</item>
     </string-array>
-    <string name="new_game_record">New Registration</string>
+    <string name="home">Home</string>
     <string name="history">History</string>
     <string name="skip">Skip</string>
     <string name="dark_mode">Dark mode</string>
